# duckPark

./: .dockerignore  .env.local.example  .gitignore  DESIGN.md  Makefile  README.md  environment.web.yml  requirements-dev.txt  requirements.txt  run_platform.sh  每日小结.md  笔记.md
AGVS_test/: PoseExtrapolator.cpp  a.out  pose_extrapolator.cpp  pose_extrapolator.h  test_pose.cpp
Alas/: a.out
Alas/src/: Mplayer.cpp  Mplayer.h  a.out  deviceInfo.c
ODB/odb_sqlite/: database.hxx  driver.cxx  main  persion-odb.cxx  persion-odb.hxx  persion-odb.ixx  persion.db  persion.hxx  persion.xml  readme.md
app/api/: carla_maps_worker.py  carla_weather_worker.py  carla_worker_runner.py  main.py  routes_benchmarks.py  routes_gateways.py  routes_reports.py  routes_runs.py  (+4 more)
contracts/: openapi.json
docker/: Dockerfile.api  Dockerfile.executor  docker-compose.yml
docs/: api-contract-maintenance.md  host-bringup.md  remote-ops.md  scenario-template-design.md
frontend/: package-lock.json  tailwind.config.cjs  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
go/: buf.gen.yaml  config.json  go.mod  go.sum  log.txt  main.go
grpcDemo/: Makefile  greeter_client.cc  greeter_server.cc  helloWorld.grpc.pb.cc  helloWorld.grpc.pb.h  helloWorld.pb.cc  helloWorld.pb.h  helloWorld.proto
log4cpp/: a.out  demo1.cpp
scripts/: configure_pi_hdmi_input.sh  export_openapi.py  publish_git_sync_branch.sh  remote_cleanup.sh  remote_git_sync.sh  remote_ops_lib.sh  start_api.sh  start_executor.sh  start_pi_frame_capture.sh  start_pi_gateway_agent.sh  start_pi_hdmi_to_uvc_bridge.sh  start_pi_uvc_gadget.sh  stop_pi_hdmi_to_uvc_bridge.sh  stop_pi_uvc_gadget.sh
shell/: logClean.sh
snackBar/: a.out  commandParse.h  main.cpp  snackBar.h
src/: AGENTS.md
src/hil_runtime/jetson/tools/jetson_cpp_detector/: CMakeLists.txt
src/hil_runtime/jetson/tools/jetson_cpp_detector/src/: main.cpp
tests/: conftest.py  test_api_gateways.py  test_api_maps.py  test_api_platform.py  test_api_runs.py  test_api_scenarios.py  test_api_system.py  test_artifacts.py  test_carla_client.py  test_carla_client_spawn.py  test_duckpark_free_drive.py  test_dut_result_receiver.py  test_executor_failure.py  test_executor_service.py  test_gateway_agent.py  test_jetson_rtp_camera_node.py  test_map_preferences.py  test_native_runtime_controller.py  test_native_xosc.py  test_pi_capture.py  test_run_state_machine.py  test_scenario_descriptor.py  test_scenario_runner_controller.py  test_scenario_template_registry.py  test_sensor_recorder.py  test_settings_env_loading.py  test_ui_page.py
(+702 files in other folders)
